fixed review suggesions

--- a/calc/index.html
+++ b/calc/index.html
@@ -3,16 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-  <title>calculator</title>
-</head>
-<body>
-  <h1>calculator</h1>
-=======
   <title>Document</title>
 </head>
 <body>
->>>>>>> db3f5eab0a07b8e5ec8765c212861d7bf61939bb
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
